fixed header gap

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
     justify-content: center;
     background-color:#1F2937;
     color:#E5E7EB;
-    gap:430px;
+    gap:470px;
     padding:8px 8px 0px 0px;
     
 }
